objects/Callout_Response_Times__c.object
<CustomObject>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>The Endpoint which was invoked</description>
        <inlineHelpText>The Endpoint which was invoked</inlineHelpText>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Invocation_Time__c</fullName>
        <label>Invocation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method which was invoked</description>
        <inlineHelpText>Method Which was invoked</inlineHelpText>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilliSeconds__c</fullName>
        <label>MilliSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>intuit_tid__c</fullName>
        <label>intuit_tid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>